LuckyStackWorker - RELEASE NOTES
================================

13/3/2022 revision release 1.3.2:
- Fixed non working grayscale PNG file opening.

12/3/2022 revision release 1.3.1:
- Decreased the sharpen slider lowest possible value to 5000
- Some textual changes in the about panel
- Minor improvements in opening file
- Fixed bug when cancelling open reference file it would reset all the sliders.

1/3/2022 minor release 1.3.0:
- Replaced ROF denoise with Sigma Filter Plus denoise
- Removed internal conversion to 32-bit depth that sometimes caused issues with color shifting
- Improved gamma & color controls
- Improved initial exposure correction
- Fixed broken PNG file reading
- Save files in 24-bit depth TIFF format

18/2/2022 minor release 1.2.0:
- Added night mode
- Changed website link
- Minor UI improvements

12/2/2022 revision release 1.1.4:
- Fixed layout rendering issue happening on some machines.

11/2/2022 revision release 1.1.3:
- Added icon to image window and file picker.
- File picker with native look and feel.
- Several layout improvements.

10/2/2022 minor release 1.1.2:
- Added zoom in/out function.

7/2/2022 revision 1.0.2:
- Fixed root folder not showing after selecting the reference image.
- Decreased shutdown wait delay to 4 seconds.

6/2/2022 revision 1.0.1:
- Fixed issues with starting up and shutting down the app.

5/2/2022 release 1.0.0:
First official release.