@@ -11,7 +11,7 @@
 
 	<groupId>nl.wilcokas</groupId>
 	<artifactId>luckystackworker</artifactId>
-	<version>1.3.2</version>
+	<version>1.3.3</version>
 	<name>LuckyStackWorker</name>
 	<description>LuckyStackWorker Application</description>
 
