@@ -1,13 +1,8 @@
 package nl.wilcokas.luckystackworker.constants;
 
-import java.util.Arrays;
-import java.util.List;
-
 public class Constants {
 	public static final String OUTPUT_POSTFIX = "_LSW";
 	public static final String STATUS_IDLE = "Idle";
 	public static final String STATUS_WORKING = "Working";
-	public static final List<String> KNOWN_PROFILES = Arrays
-			.asList("sun", "moon", "mer", "ven", "mars", "jup", "sat", "uranus", "neptune");
 	public static final String SUPPORTED_OUTPUT_FORMAT = "tif";
 }
