@@ -1,7 +1,7 @@
 {
   "name": "luckystackworker",
   "productName": "LuckyStackWorker",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "main": "app.js",
   "scripts": {
     "ng": "ng",
